--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: fonts/Roboto-Bold.ttf
+          weight: 900
 
   # To add assets to your application, add an assets section, like this:
   # assets:
