--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.8.0 # connects project to firebase core
+  firebase_analytics: ^8.3.4
+  firebase_auth: ^3.1.4
+  cloud_firestore: ^2.5.4
 
 dev_dependencies:
   flutter_test:
