--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   toggle_switch: ^1.2.0
-  overlay_container: ^0.0.5+1
+  # overlay_container: ^0.0.5+1
 
 dev_dependencies:
   flutter_test:
