--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   toggle_switch: ^1.2.0
   provider: ^6.0.1
+  syncfusion_flutter_charts: ^19.3.48
   # overlay_container: ^0.0.5+1
 
 dev_dependencies:
