--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_core: ^1.8.0 # connects project to firebase core
   firebase_auth: ^3.1.4
   cloud_firestore: ^2.5.4
+  image_picker: ^0.8.4+4
 
 
   # The following adds the Cupertino Icons font to your application.
