--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^3.1.4
   cloud_firestore: ^2.5.4
   image_picker: ^0.8.4+4
+  cached_network_image: ^3.1.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
