--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   toggle_switch: ^1.2.0
   provider: ^6.0.1
   syncfusion_flutter_charts: ^19.3.48
+  carousel_slider: ^4.0.0
   # overlay_container: ^0.0.5+1
 
 
@@ -78,6 +79,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:  
     - lib/images/wedding-placeholder.jpg
+    - lib/images/wedding-placeholder2.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
