added package for code metrics

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,6 +9,26 @@
 # packages, and plugins designed to encourage good coding practices.
 include: package:flutter_lints/flutter.yaml
 
+dart_code_metrics:
+  anti-patterns:
+    - long-method
+    - long-parameter-list
+  metrics:
+    cyclomatic-complexity: 1
+    maximum-nesting-level: 10
+    number-of-parameters: 10
+    source-lines-of-code: 100
+    technical-debt: 0
+  metrics-exclude:
+    - test/**
+  #rules:
+  #  - newline-before-return
+  #  - no-boolean-literal-compare
+  #  - no-empty-block
+  #  - prefer-trailing-comma
+  #  - prefer-conditional-expressions
+  #  - no-equal-then-else
+
 linter:
   # The lint rules applied to this project can be customized in the
   # section below to disable rules from the `package:flutter_lints/flutter.yaml`
