--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.0.0
   syncfusion_flutter_charts: ^19.3.48
   carousel_slider: ^4.0.0
+  settings_ui: ^1.0.0
   # overlay_container: ^0.0.5+1
 
 
