--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   video_player: ^2.2.10
   audioplayers: ^0.20.1
   app_settings: ^4.1.1
+  video_thumbnail: ^0.4.3
 
   # overlay_container: ^0.0.5+1
 
