--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^10.2.0
   image_picker: ^0.8.4+4
   cached_network_image: ^3.1.0+1
+  video_thumbnail: ^0.4.3
 
 
   # The following adds the Cupertino Icons font to your application.
