--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.recollectApp</string>
+	<string>com.recollect.recollectApp</string>
 	<key>PROJECT_ID</key>
 	<string>recollect-9c87a</string>
 	<key>STORAGE_BUCKET</key>
