setting up add audio

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   video_player: ^2.2.10
   audioplayers: ^0.20.1
   app_settings: ^4.1.1
+  file_picker: ^4.4.0
 
   # overlay_container: ^0.0.5+1
 
