--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -3,6 +3,13 @@
 <plist version="1.0">
 
 <dict>
+	<key>UIBackgroundModes</key>
+	<array>
+	<string>fetch</string>
+	<string>remote-notification</string>
+	</array>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>This app requires permission to access music</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires permission to access photo library</string>
 	<key>NSCameraUsageDescription</key>
