--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   audioplayers: ^0.20.1
   app_settings: ^4.1.1
   file_picker: ^4.4.0
+  open_file: ^3.2.1
 
   # overlay_container: ^0.0.5+1
 
