--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ flutter:
     - lib/images/Bird.jpg
     - lib/assets/recollect_logo.png
     - lib/assets/recollect_logo_with_bkg.png
+    - lib/assets/polaroid_camera.png
 
   #   - images/a_dot_ham.jpeg
 
