--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ flutter:
     - lib/images/FallLeaves.jpg
     - lib/images/Bird.jpg
     - lib/assets/recollect_logo.png
+    - lib/assets/audioicon.png
     - lib/assets/recollect_logo_with_bkg.png
 
   #   - images/a_dot_ham.jpeg
