--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^19.4.53
   intl: ^0.17.0
   just_audio: ^0.9.20
+  dots_indicator: ^2.1.0
 
   # overlay_container: ^0.0.5+1
 
